examples/test/testpolicy14677.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14677
  namespace: namespace197
spec:
  podSelector:
    matchLabels:
      key0: value31
      key49: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value21
          key31: value31
      podSelector:
        matchLabels:
          key30: value10
